# surfwetter-ml

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  surfwetter_ml.rst
src/surfwetter_ml/: cli.py
surfwetter_ml/: __init__.py  __main__.py  forecast.py  plot.py  retrieval.py  util.py
surfwetter_ml/config/: config.yaml  setting.py
tests/: test_cli.py  test_core.py
