[build-system]
requires = [
    "setuptools>=40.1.0",
]

[project]
name = "surfwetter-ml"
version = "0.1.0"
description = "ML wind forecast library to find the best lake for surfing in Switzerland and abroad"
readme = "README.rst"
authors = [
  {name = "Roman", email = "roman@techguides.yt"}
]
maintainers = [
  {name = "Roman", email = "roman@techguides.yt"}
]
classifiers = [

]
license = {text = "MIT license"}
requires-python = ">=3.12"
dependencies = [
  "typer",
  "ipykernel (>=6.29.5,<7.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "isodate (>=0.7.2,<0.8.0)",
  "xarray (>=2025.4.0,<2026.0.0)",
  "cfgrib (>=0.9.15.0,<0.10.0.0)",
  "meteodata-lab[regrid] (>=0.3.0,<0.4.0)",
  "h5netcdf (>=1.6.1,<2.0.0)",
  "zarr (>=3.0.7,<4.0.0)",
  "matplotlib (>=3.10.1,<4.0.0)",
  "pydantic-yaml (>=1.4.0,<2.0.0)",
  "dict2xml (>=1.7.6,<2.0.0)",
]

[tool.poetry.dependencies]
python = "~3.12"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff.lint]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "S603", # flake8-bandit subprocess-without-shell-equals-true
    "S607", # flake8-bandit start-process-with-partial-path
    "E501", # pycodestyle line-too-long
]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
